--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎸 Guitar Trainer</title>
+    <title>Strumly</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter for clean typography -->
@@ -539,7 +539,7 @@
   </head>
   <body>
     <div class="main-container">
-      <h1 class="text-3xl font-bold text-white mb-4">TARBUD</h1>
+      <h1 class="text-3xl font-bold text-white mb-4">STRUMLY</h1>
 
       <!-- Mode Selection Buttons -->
       <div class="mode-selection flex justify-center gap-4 mb-6 w-full">
